0.0.2 qcp and cc working well :)
